--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^3.9.1",
-    "@prisma/client": "^6.1.0",
+    "@prisma/client": "^6.3.1",
+    "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
@@ -31,23 +32,27 @@
     "date-fns": "^4.1.0",
     "instamojo-nodejs": "^0.0.5",
     "lucide-react": "^0.469.0",
+    "moment": "^2.30.1",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
-    "prisma": "^6.1.0",
     "react": "^19.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-to-print": "^3.0.5",
+    "react-webcam": "^7.2.0",
+    "sonner": "^1.7.4",
     "stripe": "^17.5.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.5",
     "zod": "^3.24.1",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/dom-speech-recognition": "^0.0.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-color": "^3.0.13",
@@ -58,6 +63,7 @@
     "postcss": "^8",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
+    "prisma": "^6.3.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
