--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.6",
@@ -39,6 +40,7 @@
     "lucide-react": "^0.469.0",
     "moment": "^2.30.1",
     "next": "15.1.0",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.4",
     "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
