--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,11 @@
     "src/app/(main)/interview/action.ts": {
       "maxDuration": 60
     }
-  }
+  },
+  "redirects": [
+    { "source": "https://www.cvhelper.in/:path*", "destination": "https://cvhelper.in/:path*", "permanent": true },
+    { "source": "/:path*.html", "destination": "/:path*", "permanent": true },
+    { "source": "/:path*.php", "destination": "/:path*", "permanent": true }
+  ]
 }
+  
